force-app/main/default/objects/IDENTITY_Settings__c/IDENTITY_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IDENTITY - Settings</label>
</CustomObject>