force-app/main/default/objects/IDENTITY_Settings__c/fields/Activate_New_Design__c.field-meta.xml
<CustomField>
    <fullName>Activate_New_Design__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to activate new design without dependence on code.</description>
    <label>Activate New Design</label>
    <type>Checkbox</type>
</CustomField>