force-app/main/default/objects/IDENTITY_Settings__c/fields/AES_Key__c.field-meta.xml
<CustomField>
    <fullName>AES_Key__c</fullName>
    <description>Used for MyRepairs Activation</description>
    <label>AES Key</label>
    <type>TextArea</type>
</CustomField>