force-app/main/default/objects/IDENTITY_Settings__c/fields/Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>Custom_Domain__c</fullName>
    <label>Custom Domain</label>
    <type>Url</type>
</CustomField>