force-app/main/default/objects/IDENTITY_Settings__c/fields/Deactivate_User_After__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_User_After__c</fullName>
    <label>Deactivate User After</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>