force-app/main/default/objects/IDENTITY_Settings__c/fields/Default_Origin_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Default_Origin_Parameter__c</fullName>
    <label>Default Origin Parameter</label>
    <length>15</length>
    <type>Text</type>
</CustomField>