force-app/main/default/objects/IDENTITY_Settings__c/fields/Exclu_Offers_Web_Only__c.field-meta.xml
<CustomField>
    <fullName>Exclu_Offers_Web_Only__c</fullName>
    <label>Exclu Offers Web Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>