force-app/main/default/objects/IDENTITY_Settings__c/fields/Excluded_SKU_for_Purchase_History_API__c.field-meta.xml
<CustomField>
    <fullName>Excluded_SKU_for_Purchase_History_API__c</fullName>
    <label>Excluded SKU for Purchase History API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>