force-app/main/default/objects/IDENTITY_Settings__c/fields/Guest_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Guest_User_Id__c</fullName>
    <label>Guest User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>