force-app/main/default/objects/IDENTITY_Settings__c/fields/Language_Country_Values_2__c.field-meta.xml
<CustomField>
    <fullName>Language_Country_Values_2__c</fullName>
    <label>Language Country Values 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>