force-app/main/default/objects/IDENTITY_Settings__c/fields/Twist_locals__c.field-meta.xml
<CustomField>
    <fullName>Twist_locals__c</fullName>
    <description>Forgot Password redirection for LVapp need to be different for Twist locales.</description>
    <label>Twist locals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>