force-app/main/default/objects/IDENTITY_Settings__c/fields/Username_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Username_Suffix__c</fullName>
    <label>Username Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>